# AlloSystem

./: .gitignore  .gitmodules  .travis.yml  AlloSystem.rb  CMakeLists.txt  CustomLibPaths.cmake  LICENSE  Makefile  Makefile.buildandrun  Makefile.common  Makefile.config  Makefile.rules  Makefile.usertemplate  README.md  README.txt  about.txt  buildandrun.sh  coding_style.txt  debug.sh  distclean  edit.sh  emBuildLibs.sh  emMain.html  emRun.sh  index.html  install_all_dependencies.sh  install_dependencies.sh  jittest.sh  params.json  run.sh  standalone.sh  update_from_web.sh
alloGLV/: CMakeLists.txt  Makefile
alloGLV/alloGLV/: al_ControlGLV.hpp  al_ParameterGUI.hpp  al_ProtoApp.hpp  al_SequencerGUI.hpp
alloGLV/examples/: appGUI.cpp  detachableGUI.cpp  parametergui.cpp  presetsgui.cpp  simpleGUI.cpp
alloGLV/src/: al_ControlGLV.cpp  al_ParameterGUI.cpp  al_ProtoApp.cpp  al_SequencerGUI.cpp
alloLithe/: CMakeLists.txt
alloLithe/alloLithe/: PatcherGUI.hpp  al_Node.hpp  alloLithe.hpp
alloLithe/src/: al_Node.cpp  dummy.cpp
alloaudio/: CMakeLists.txt  convolver.cpp  convolver.h  dependencies
alloaudio/alloaudio/: al_AmbiFilePlayer.hpp  al_AmbiTunedDecoder.hpp  al_AmbisonicsConfig.hpp  al_BassManager.hpp  al_Convolver.hpp  al_Decorrelation.hpp  al_OutputMaster.hpp  al_SoundfileBuffered.hpp  butter.h
alloaudio/examples/: ambifilePlayer.cpp  ambisonicsPanner.cpp  decorrelation.cpp  multichannelControl.cpp  multichannelConvolution.cpp  multichannelScope.cpp
alloaudio/interfaces/: alloaudio-main.html  alloaudio-meters.html
alloaudio/src/: al_AmbiFilePlayer.cpp  al_AmbiTunedDecoder.cpp  al_BassManager.cpp  al_Convolver.cpp  al_Decorrelation.cpp  al_OutputMaster.cpp  al_SoundfileBuffered.cpp  butter.c
alloaudio/src/zita-convolver-3.1.0/: INSTALL  (+1 more)
alloaudio/tests/: alloaudioTests.cpp
alloaudio/unitTests/: alloaudioTests.cpp  convolverTests.cpp  decorrelationTests.cpp
allocore/: CMakeLists.txt  Makefile  dependencies  install_dependencies.sh
allocore/allocore/: al_Allocore.hpp
allocore/examples/: presets.cpp
allocore/graphics/: al_BufferObject.hpp  al_Config.h  al_Image.hpp  al_Isosurface.hpp  al_Light.hpp  al_Model.hpp  al_Shader.hpp  al_Surface.hpp  al_Texture.hpp
allocore/io/: al_File.hpp  al_Socket.hpp  al_Window.hpp
allocore/math/: al_Matrix4.hpp  al_Quat.h  al_Quat.hpp  al_Random.hpp  al_Vec.hpp
allocore/modules/: apr_module.cmake  assimp_module.cmake  font_module.cmake  freeimage_module.cmake  gl3_module.cmake  gl_module.cmake  glfw_module.cmake  glut_module.cmake  libsndfile_module.cmake  opencl_module.cmake  osc_module.cmake  portaudio_module.cmake  zeroconf_module.cmake
allocore/protocol/: al_Graphics.hpp  al_GraphicsBackend.hpp  al_GraphicsBackendOpenGL.hpp  al_OSC.hpp  al_OSCAPR.hpp  al_Serialize.hpp
allocore/sound/: al_AudioScene.hpp
allocore/spatial/: al_CoordinateFrame.hpp
allocore/system/: al_Time.hpp
allocore/types/: al_MsgTube.hpp
allocore/unitTests/: CMakeLists.txt  Makefile  _utCompiler.cpp  debugTests.cpp  unitTests.cpp  utAllocore.h  utAmbisonics.cpp  utAsset.cpp  utAudioScene.cpp  utFile.cpp  utGraphicsDraw.cpp  utGraphicsMesh.cpp  utIOAudioIO.cpp  utIOSocket.cpp  utIOWindowGL.cpp  utMath.cpp  utMathSpherical.cpp  utProtocolOSC.cpp  utProtocolSerialize.cpp  utSpatial.cpp  utSystem.cpp  utThread.cpp  utTypes.cpp  utTypesConversion.cpp
allocv/: CMakeLists.txt  Makefile  dependencies  install_dependencies.sh
allocv/allocv/: al_OpenCV.hpp  al_VideoCapture.hpp
allocv/examples/: depthSensor.cpp  videoCapture.cpp  videoCapture2.cpp
allocv/src/: al_OpenCV.cpp  al_VideoCapture.cpp
allolithe/: CMakeLists.txt
allolithe/allolithe/: al_Node.hpp  al_PatcherGUI.hpp  al_SoundEngine.hpp  alloLithe.hpp  allolithe.hpp
allolithe/src/: al_Node.cpp
allolithe/test/: CMakeLists.txt  newTest.sh
allosphere/: CMakeLists.txt  dependencies
allosphere/allosphere/: al_AlloApp.hpp  al_AlloSphereApp.hpp
allosphere/examples/: allosphereApp.cpp  allosphereAppAudio.cpp  distributedApp.cpp
allosphere/src/: al_AlloApp.cpp  al_AlloSphereApp.cpp
alloutil/: CMakeLists.txt  Makefile  dependencies  install_dependencies.sh
alloutil/alloutil/: al_AlloSphere.hpp  al_AlloSphereApp.hpp  al_AlloSphereAudioSpatializer.hpp  al_AlloSphereSpeakerLayout.hpp  al_AllosphereApp.hpp  al_App.hpp  al_AudioRenderer.hpp  al_ControlNav.hpp  al_CubeMapFBO.hpp  al_FPS.hpp  al_Field3D.hpp  al_FileWatcher.hpp  al_FrameBufferGL.hpp  al_Helpers.hpp  al_InterfaceServerClient.hpp  al_Lua.hpp  al_MeshVBO.hpp  al_Navigator.hpp  al_OITFbo.hpp  al_OmniApp.hpp  al_OmniStereo.hpp  al_OmniStereo2.cpp  al_OmniStereo2.hpp  al_OmniStereoGraphicsRenderer.hpp  al_OmniUtil.hpp  al_OverlayTextGL.hpp  al_Projection.hpp  al_ProtoApp.hpp  al_RayApp.hpp  al_RayCastingGraphicsRenderer.hpp  al_RayStereo.hpp  al_ResourceManager.hpp  al_ShaderManager.hpp  al_ShotList.hpp  al_Simulator.hpp  al_SliceViewer.hpp  al_TextureGL.hpp  al_VCR.hpp  al_VoxelStack.hpp  al_WarpBlend.hpp
alloutil/examples/: VCR.cpp  allosphereApp.cpp  allosphereAppAudio.cpp  calibration_pattern.cpp  cubemap.cpp  cubemap_tuning  fluid.cpp  oit.cpp  omni.cpp  omniTextRendering.cpp  omniWithFog.cpp  showCubeMapFaces.cpp  vbo_omni.cpp
alloutil/src/: Makefile  Makefile.config  al_AlloSphereApp.cpp  al_AllosphereApp.cpp  al_App.cpp  al_FileWatcher.cpp  al_InterfaceServerClient.cpp  al_OmniStereo.cpp  al_OmniStereo2.cpp  al_ProtoApp.cpp  al_RayStereo.cpp  al_ResourceManager.cpp  al_Simulator.cpp  al_SliceViewer.cpp  al_WarpBlend.cpp
allovsr/: AlloInstall.md  AlloTUTORIAL.md  AlloTUTORIAL.txt  CMakeLists.txt  Makefile  style0.css
allovsr/allovsr/: al_omnivsr.hpp  al_vsr.hpp  al_vsrInterface.hpp
allovsr/examples/: empty.cpp  flags.txt  grid.cpp  hopf.cpp  interface.cpp  knot.cpp  omni.cpp  omnivsr.cpp  robot.cpp  twists.cpp
allovsr/old-examples/: hopf.cpp
allovsr/osx/: File.cpp
allovsr/template/: File.cpp
allovsr/tests/: coordinate.cpp
allovtk/: CMakeLists.txt  dependencies
allovtk/allovtk/: al_VTKRenderer.hpp
allovtk/examples/: hellovtk.cpp
allovtk/src/: al_VTKRenderer.cpp
template/: CMakeLists.txt
(+1388 files in other folders)
